tests/cases/fail/parser/generic-for-4/source.lua
for index, local in pairs(list) do end